# Library-FastAPI

./: .env  .gitignore  README.md  docker-compose.yml  docker-stack.yml  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: actions.py  auth.py  books.py  loans.py  users.py
backend/app/core/: auth.py  config.py  db.py  initial_data.py  security.py
frontend/: package.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/books/: page.tsx
frontend/src/app/loans/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AddBookModal.tsx  BooksList.tsx  EditBookModal.tsx  LoansView.tsx  LoginView.tsx  LogoutButton.tsx  MyNavbar.tsx  RegisterView.tsx
frontend/src/utils/: authUtils.ts  authUtils.tsx  statusTranslations.ts
